--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,9 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!--<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">-->
+  <link href="https://fonts.googleapis.com/css?family=Lato|Oswald" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="bs-theme.css">
+  <link rel="stylesheet" type="text/css" href="app.css">
   <!-- Service worker support is disabled by default.
        Install the worker script and uncomment to enable.
        Only enable service workers in production.
